client.log
[2K[1G[2m$ cd ./client && yarn start[22m
[2K[1G[2m$ react-scripts start[22m
[HPM] Proxy created: /  -> http://localhost:3001
[34mℹ[39m [90m｢wds｣[39m: Project is running at http://192.168.1.78/
[34mℹ[39m [90m｢wds｣[39m: webpack output is served from 
[34mℹ[39m [90m｢wds｣[39m: Content not from webpack is served from /home/potato/Repositories/countdown/client/public
[34mℹ[39m [90m｢wds｣[39m: 404s will fallback to /
[36mStarting the development server...[39m
[36m[39m
[31mFailed to compile.[39m
[31m[39m
[7m../shared/index.js[27m
SyntaxError: /home/potato/Repositories/countdown/shared/index.js: Support for the experimental syntax 'exportDefaultFrom' isn't currently enabled (3:8):

[0m [90m 1 | [39m[90m// @flow[39m[0m
[0m [90m 2 | [39m[0m
[0m[31m[1m>[22m[39m[90m 3 | [39m[36mexport[39m type [33mID[39m [33m=[39m string[33m;[39m[0m
[0m [90m   | [39m       [31m[1m^[22m[39m[0m
[0m [90m 4 | [39m[0m
[0m [90m 5 | [39m[36mexport[39m type [33mPlayer[39m [33m=[39m {[33m|[39m[0m
[0m [90m 6 | [39m  id[33m:[39m [33mID[39m[33m,[39m[0m

Add @babel/plugin-proposal-export-default-from (https://git.io/vb4yH) to the 'plugins' section of your Babel config to enable transformation.
